set badge-event class to set width of event to prevent bleed (#447)

--- a/src/teacher_web/web/static/default/css/my.css
+++ b/src/teacher_web/web/static/default/css/my.css
@@ -180,3 +180,7 @@ header.masthead .site-heading h1 {
 img.mask {
     opacity: 0.65;
     }
+
+.badge-event {
+    width: 100%;   
+}
